nullaway_error_9C84CBDF-4049-4D53-A49D-EBAE1C1D6D21.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-messaging/src/main/java/org/springframework/messaging/handler/invocation/reactive/AbstractMethodMessageHandler.java:569: error: [NullAway] assigning @Nullable expression to @NonNull field
			this.handlerMethod = handlerMethod;
			                   ^
    (see http://t.uber.com/nullaway )
